tests/ui/consts/const-block-const-bound.stderr
error[E0277]: the trait bound `UnconstDrop: const Destruct` is not satisfied
  --> $DIR/const-block-const-bound.rs:18:9
   |
LL |         f(UnconstDrop);
   |         ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
